@@ -1,7 +1,7 @@
 #! /usr/bin/python
 
-from icat.client import Client
 import logging
+import icat
 import icat.config
 
 logging.basicConfig(level=logging.INFO)
@@ -10,5 +10,5 @@ logging.basicConfig(level=logging.INFO)
 icat.config.defaultsection = "hzb"
 conf = icat.config.Config(needlogin=False).getconfig()
 
-client = Client(conf.url, **conf.client_kwargs)
+client = icat.Client(conf.url, **conf.client_kwargs)
 print "Connect to %s\nICAT version %s\n" % (conf.url, client.apiversion)
