@@ -1,7 +1,7 @@
 #! /usr/bin/python
 
-from icat.client import Client
 import logging
+import icat
 import icat.config
 
 logging.basicConfig(level=logging.INFO)
@@ -10,7 +10,7 @@ logging.basicConfig(level=logging.INFO)
 icat.config.defaultsection = "hzb"
 conf = icat.config.Config().getconfig()
 
-client = Client(conf.url, **conf.client_kwargs)
+client = icat.Client(conf.url, **conf.client_kwargs)
 sessionId = client.login(conf.auth, conf.credentials)
 
 print "Login to", conf.url, "was successful."
